@@ -3,13 +3,13 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.121 1998/04/24 06:00:01 wessels Exp $
+dnl  $Id: configure.in,v 1.122 1998/04/24 06:08:14 wessels Exp $
 dnl
 dnl
 dnl
 AC_INIT(src/main.c)
 AC_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.121 $)dnl
+AC_REVISION($Revision: 1.122 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AC_CONFIG_AUX_DIR(cfgaux)
 
@@ -340,19 +340,11 @@ AC_ARG_ENABLE(forw-via-db,
   fi
 ])
 
-AC_ARG_ENABLE(cache-digest,
-[  --enable-cache-digest   Maintain a digest of our cache ],
+AC_ARG_ENABLE(cache-digests,
+[  --enable-cache-digests  Use Cache Digests],
 [ if test "$enableval" = "yes" ; then
-    echo "SQUID_MAINTAIN_CACHE_DIGEST enabled"
-    AC_DEFINE(SQUID_MAINTAIN_CACHE_DIGEST)
-  fi
-])
-
-AC_ARG_ENABLE(peer-digests,
-[  --enable-peer-digests   Query peers for their cache digests],
-[ if test "$enableval" = "yes" ; then
-    echo "SQUID_PEER_DIGEST enabled"
-    AC_DEFINE(SQUID_PEER_DIGEST)
+    echo "USE_CACHE_DIGESTS enabled"
+    AC_DEFINE(USE_CACHE_DIGESTS)
   fi
 ])
 
