@@ -1,6 +1,6 @@
 
 /*
- * $Id: store.c,v 1.408 1998/04/22 16:22:37 rousskov Exp $
+ * $Id: store.c,v 1.409 1998/04/24 06:08:22 wessels Exp $
  *
  * DEBUG: section 20    Storage Manager
  * AUTHOR: Harvest Derived
@@ -537,7 +537,7 @@ storeComplete(StoreEntry * e)
     assert(e->mem_status == NOT_IN_MEMORY);
     if (!storeEntryValidLength(e))
 	EBIT_SET(e->flag, ENTRY_BAD_LENGTH);
-#if SQUID_PEER_DIGEST
+#if USE_CACHE_DIGESTS
     if (e->mem_obj->request)
 	e->mem_obj->request->hier.store_complete_stop = current_time;
 #endif
